Functional To Do App w/o Users

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -30,3 +30,17 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
+.todo-main {
+	width: 60%;
+	margin-left: 20%;
+	margin-right: 20%;
+}
+
+.headline {
+	text-align: center;
+}
+
+#copyright {
+	text-align: right;
+}
