--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,20 +1,19 @@
 <div class="headline">
-	<h1><%= @list.name %></h1>
+	<h1>Happy Fun To Do List!</h1>
 </div>
 
 <table class="table">
 <% @items.each do |item| %>
-	<tr>
-		<td><%= item.completed %></td>
-		<td><%= item.task %></td>
-	</tr>
+	<% if item.completed == false %>
+		<tr>
+	<!-- 		<td><%= check_box_tag :completed, false, item.completed? %></td> -->
+			<td><%= item.task %> - <%= link_to "Complete", complete_item_path(@list.id, item.id) %></td>
+<!-- 			<td><%= link_to "Done", list_path, method: :delete, remote: true %></td>
+ -->	</tr>
+	<% end %>
 <% end %>
 </table>
 
 <button class="btn btn-large btn-block">
 	<%= link_to 'New Item', new_list_item_path(@list) %>
 </button>
-<!-- 
-<%= link_to 'Edit', edit_list_path(@list) %> |
-<%= link_to 'Back', lists_path %>
- -->
