--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -32,9 +32,6 @@
 // @linkColor: #ff0000;
 
 .todo-main {
-	width: 60%;
-	margin-left: 20%;
-	margin-right: 20%;
 }
 
 .headline {
@@ -43,4 +40,7 @@
 
 #copyright {
 	text-align: right;
+}
+
+.well {
 }
