Nearly finished app, with minimal following capabilities

--- a/app/views/lists/_sidebar.html.erb
+++ b/app/views/lists/_sidebar.html.erb
@@ -2,17 +2,17 @@
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
       <li class="nav-header">Following</li>
-      <% unless @user.followed_users.empty? %>
-        <% @user.followed_users.each do |user| %>
-          <li><%= link_to user.email, list_path(user) %></li>
+      <% unless current_user.followed_users.empty? %>
+        <% current_user.followed_users.each do |user| %>
+          <li><%= link_to user.email, list_path(user.list) %></li>
         <% end %>
       <% else %>
         <li>None</li>
       <% end %>
       <li class="nav-header">Followers</li>
-      <% unless @user.followers.empty? %>
+      <% unless current_user.followers.empty? %>
         <% @user.followers.each do |user| %>
-          <li><%= link_to user.email %></li>
+          <li><%= link_to user.email, list_path(user.list) %></li>
         <% end %>
       <% else %>
         <li>None</li>
@@ -21,10 +21,9 @@
   </div>
   <div class="well sidebar-nav">
     <ul class="nav nav-list">
-      <%= form_tag("/users/:id/follow", :method => "get") do %>
+      <%= form_tag(follow_path) do %>
         <li class="nav-header">Invite Followers</li>  
-    <!--   <%= label_tag(:invitee, "Invite Followers") %> -->        
-        <%= text_field_tag(:invitee) %>
+        <%= text_field_tag(:follower) %>
         <%= submit_tag("Submit") %>
       <% end %>
     </ul>
