--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -17,6 +17,7 @@
 // Font Awesome
 @import "fontawesome";
 
+
 // Glyphicons
 //@import "twitter/bootstrap/sprites.less";
 
@@ -44,3 +45,64 @@
 
 .well {
 }
+
+td.task {
+	padding-left: 5%;
+}
+td.tick-mark{
+	width: -50%;
+	padding-left: 5%;
+}
+
+.navbar-fixed-top {
+	position: static;
+	margin-bottom: 20px;
+}
+
+.btn {
+	margin-bottom: 20px;
+}
+
+.headline h1 {
+    font-family: 'Allan', Helvetica, Arial, sans-serif;
+    font-size: 70px;
+    line-height: 75px;
+  }
+   
+.table td {
+    font-family: 'Cardo', Georgia, Times, serif;
+    font-size: 18px;
+    line-height: 25px;
+  }
+
+.field {
+  display: inline;
+}
+
+.actions {
+  display: inline;
+}
+
+input {
+  vertical-align: top;
+  line-height: 25px;
+}
+
+#new-task-wrapper {
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#new-task {
+  width: 335px;
+  margin-left: auto;
+  margin-right: auto;
+}
+//html {
+//  background: url(grey_wash_wall.png) no-repeat center center fixed;
+//  -webkit-background-size: cover;
+//  -moz-background-size: cover;
+//  -o-background-size: cover;
+//  background-size: cover;
+//}
