--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,29 +1,12 @@
-<%= form_for [@list, @item] do |f| %>
-  <% if @item.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
-
-      <ul>
-      <% @item.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :task %><br />
-    <%= f.text_field :task %>
-  </div>
-<!--   <div class="field">
-    <%= f.label :completed %><br />
-    <%= f.check_box :completed %>
-  </div> -->
-<!--   <div class="field">
-    <%= f.label :list_id %><br />
-    <%= f.number_field :list_id %>
-  </div> -->
-  <div class="actions">
-    <%= f.submit %>
+<%= form_for @item, :url => new_item_path, :remote => true do |f| %>
+  <div id="new-task-wrapper">
+      <div id="new-task">
+          <div class="field">
+            <%= f.text_field :task %>
+          </div>
+          <div class="actions">
+            <%= f.submit "Add New Task", :id => 'new-task-button' %>
+          </div>
+      </div>
   </div>
 <% end %>
