--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,6 +1,13 @@
 <h1>Editing item</h1>
 
-<%= render 'form' %>
+<%= form_for [@list, @item] do |f| %>
 
-<%= link_to 'Show', @item %> |
-<%= link_to 'Back', items_path %>
+    <div class="field">
+      <%= f.text_field :task, :value => @item.task %>
+    </div>
+    <div class="actions">
+      <%= f.submit %>
+    </div>
+<% end %>
+
+<%= link_to 'Back', list_path(@list) %>
