--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,10 @@
     <title><%= content_for?(:title) ? yield(:title) : "Happyfuntodo" %></title>
     <%= csrf_meta_tags %>
 
+    <!-- Google Fonts -->
+    <link href="http://fonts.googleapis.com/css?family=Allan:bold" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Cardo" rel="stylesheet" type="text/css">
+
     <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
@@ -46,7 +50,7 @@
           </a>
           <a class="brand" href="#">Happy Fun Todo App</a>
           <div class="container nav-collapse">
-            <ul class="nav">
+            <ul class="nav pull-right">
               <% if user_signed_in? %>
                 <li><%= link_to current_user.email, edit_user_registration_path %></li>
                 <li><%= link_to "Log Out", destroy_user_session_path, method: :delete %></li>
