--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -99,6 +99,10 @@ input {
   margin-left: auto;
   margin-right: auto;
 }
+
+li.following a {
+  display: inline;
+}
 //html {
 //  background: url(grey_wash_wall.png) no-repeat center center fixed;
 //  -webkit-background-size: cover;
