--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Happy Fun Todo App</a>
+          <% if user_signed_in? %>
+            <a class="brand" href="<%= list_path(current_user.list) %>">Happy Fun Todo App</a>
+          <% else %>
+            <a class="brand">Happy Fun Todo App</a>
+          <% end %>
           <div class="container nav-collapse">
             <ul class="nav pull-right">
               <% if user_signed_in? %>
