--- a/app/views/lists/_follower_sidebar.html.erb
+++ b/app/views/lists/_follower_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list">
 		<li class='nav-header'><%= link_to "Back To Your List", list_path(current_user.list) %></li>
-		<li class='nav header'><%= link_to "Unfollow List", '#' %>  </li>
+		<li class='nav header'><%= button_to "Unfollow List", unfollow_path(@list) %></li>
 	</ul>
 </div>
