--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
             <span class="icon-bar"></span>
           </a>
           <% if user_signed_in? %>
-            <a class="brand" href="<%= list_path(current_user.list) %>">Happy Fun Todo App</a>
+            <a class="brand" href="<%= list_path(current_user.list) %>">Happy Fun To Do App</a>
           <% else %>
             <a class="brand">Happy Fun Todo App</a>
           <% end %>
