--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -44,15 +44,18 @@
 }
 
 .well {
+  background-color: #F5FAC5;
+
+  a:hover {
+    background-color: #F5FAC5;
+    color: #666;
+  }
 }
 
 td.task {
 	padding-left: 5%;
 }
-td.tick-mark{
-	width: -50%;
-	padding-left: 5%;
-}
+
 
 .navbar-fixed-top {
 	position: static;
@@ -103,10 +106,28 @@ input {
 li.following a {
   display: inline;
 }
-//html {
-//  background: url(grey_wash_wall.png) no-repeat center center fixed;
-//  -webkit-background-size: cover;
-//  -moz-background-size: cover;
-//  -o-background-size: cover;
-//  background-size: cover;
-//}
+
+.authenticate {
+  width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.follower {
+  text-align: center;
+}
+
+body {
+  background: url(ps_neutral.png) repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+tbody {
+  background-color: white;
+}
+.brand:hover {
+  background-color: #F5FAC5;
+}
