Fixed bug with show view

--- a/app/views/lists/_item.html.erb
+++ b/app/views/lists/_item.html.erb
@@ -1,3 +1,3 @@
-<%= content_tag_for(:tr, item)  do %>
-	<td><%= item.task %> - <%= link_to "Complete", complete_item_path(@list.id, item.id), remote: true %></td>
-<% end %>
+# <%= content_tag_for(:tr, item)  do %>
+# 	<td><%= item.task %> - <%= link_to "Complete", complete_item_path(@list.id, item.id), remote: true %></td>
+# <% end %>
