--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -6,13 +6,29 @@
 		<h1><%= @user.name %>'s To Do's!</h1>
 	</div>
 
+	<% if current_user.list == @list %>
+	
 	<table class="table table-striped table-bordered">
-	<% @items.each do |item| %>
-		<% if item.completed == false %>
-			<%= render item %>
+		<% @items.each do |item| %>
+			<% if item.completed == false %>
+				<%= render item %>
+			<% end %>
 		<% end %>
-	<% end %>
 	</table>
+	
+	<% else %>
+
+	<table class="table table-striped table-bordered">
+		<% @items.each do |item| %>
+			<% if item.completed == false %>
+				<%= content_tag_for(:tr, item)  do %>
+					<td class="task"><%= item.task %></td>
+				<% end %>
+			<% end %>
+		<% end %>
+	</table>
+
+	<% end %>
 
 	<% if current_user == @user %>
 		<%= render 'items/form' %>
